--- a/index.html
+++ b/index.html
@@ -72,13 +72,104 @@
         </div>
         <div>
           <ion-icon name="chatbubble-outline" class="text-[#6B6B6B]"></ion-icon>
-          <ion-icon name="flash" class="paw"></ion-icon>
+          <ion-icon name="flash" class="paw text-[#6B6B6B]"></ion-icon>
           <div
             class="bg-red-500 w-[4.5px] h-[4.5px] rounded-full absolute translate-x-[10.5px] -translate-y-3.5"
           ></div>
         </div>
+        <div class="nav-inactive mr-8">
+          <div>Liên kết</div>
+        </div>
+        <div class="nav-inactive mr-3">
+          <div>Tra cứu</div>
+        </div>
+        <div class="nav-inactive mr-3">
+          <div>Báo cáo</div>
+        </div>
+        <div class="nav-active mr-3">
+          <div>Cộng đồng</div>
+        </div>
       </div>
     </nav>
-    <div>MENU</div>
+    <div class="flex flex-row">
+      <div class="w-60 p-5">
+        <p class="text-[10px] font-semibold text-[#6b6b6b] pb-2.5 ml-1.5">
+          MENU
+        </p>
+        <button
+          class="mb-2 text-[11px] font-semibold bg-[#E4EEE3] flex items-center w-[100%] text-left text-[#319527] rounded-lg p-1.5"
+        >
+          <div
+            class="bg-[#CDEBCA] rounded-md w-[19px] h-[19px] mr-2 border-[#BFE5BB] border-[1.5px] flex items-center justify-center"
+            style="zoom: 1.2"
+          >
+            <ion-icon name="home" style="zoom: 0.9"></ion-icon>
+          </div>
+          Bảng tin
+        </button>
+        <button
+          class="mb-2 text-[11px] font-semibold flex items-center w-[100%] text-left text-[#CACACA] rounded-lg p-1.5"
+        >
+          <div
+            class="rounded-md w-[19px] h-[19px] mr-2 border-[#ECECEC] border-[1.5px] flex items-center justify-center"
+            style="zoom: 1.2"
+          >
+            <ion-icon name="chatbox-ellipses"></ion-icon>
+          </div>
+          <div class="text-[#6B6B6B]">Diễn đàn</div>
+        </button>
+        <button
+          class="mb-2 text-[11px] font-semibold flex items-center w-[100%] text-left text-[#CACACA] rounded-lg p-1.5"
+        >
+          <div
+            class="rounded-md w-[19px] h-[19px] mr-2 border-[#ECECEC] border-[1.5px] flex items-center justify-center"
+            style="zoom: 1.2"
+          >
+            <ion-icon name="megaphone"></ion-icon>
+          </div>
+          <div class="text-[#6B6B6B]">Loa lớn</div>
+        </button>
+        <button
+          class="mb-2 text-[11px] font-semibold flex items-center w-[100%] text-left text-[#CACACA] rounded-lg p-1.5"
+        >
+          <div
+            class="rounded-md w-[19px] h-[19px] mr-2 border-[#ECECEC] border-[1.5px] flex items-center justify-center"
+            style="zoom: 1.2"
+          >
+            <ion-icon name="newspaper"></ion-icon>
+          </div>
+          <div class="text-[#6B6B6B]">Tin tức Đoàn</div>
+        </button>
+        <button
+          class="mb-2 text-[11px] font-semibold flex items-center w-[100%] text-left text-[#CACACA] rounded-lg p-1.5"
+        >
+          <div
+            class="rounded-md w-[19px] h-[19px] mr-2 border-[#ECECEC] border-[1.5px] flex items-center justify-center"
+            style="zoom: 1.2"
+          >
+            <ion-icon name="bookmark"></ion-icon>
+          </div>
+          <div class="text-[#6B6B6B]">Đã lưu</div>
+        </button>
+      </div>
+      <div class="flex flex-1"></div>
+      <div class="w-60 p-5">
+        <button
+          class="mb-2 text-[11px] font-semibold bg-[#319527] flex items-center justify-center w-[100%] text-left leading-3 text-white rounded-lg p-1.5"
+        >
+          <ion-icon name="add-outline" class="text-[16px] mr-1"></ion-icon>
+          Tạo bài viết mới
+        </button>
+        <div class="bg-white text-[11px] p-2.5 mt-4 rounded-lg long-shadow">
+          <span class="font-bold text-[#6B6B6B]">Xếp hạng tháng</span>
+          <div class="flex flex-row">
+            <span class="">K63</span>
+            <span class="flex flex-1">12 Nga</span>
+            <span>-12 điểm</span>
+            <ion-icon name="ribbon-outline"></ion-icon>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
